added debug level and edited issues with the question button and its text

--- a/metadata/todo.txt
+++ b/metadata/todo.txt
@@ -7,6 +7,9 @@ Core Gameplay Features:
 	- Tutorial:
 		- Information text should be added to the first few levels
 
+Debugging:
+	- Issues arise when a player jumps next two crates, cause quasi death
+
 Advanced / Future Features:
 	- Level Progression:
 		- Update level menu buttons if a level is completed perfectly (fewest bombs possible)
