added to todo.txt and fixed bug

--- a/metadata/todo.txt
+++ b/metadata/todo.txt
@@ -6,9 +6,12 @@ Core Gameplay Features:
 		- Add sound effects (general need)
 	- Tutorial:
 		- Information text should be added to the first few levels
+		- To add clarity, bombs should have hover-tips that say their bomb type
+	- General:
+		- Add some crisp level transition effects (maybe just fade to black) 
 
 Debugging:
-	- Issues arise when a player jumps next two crates, cause quasi death
+	- Issues arise when a player jumps next two crates, causes quasi death
 
 Advanced / Future Features:
 	- Level Progression:
