--- a/metadata/todo.txt
+++ b/metadata/todo.txt
@@ -7,6 +7,7 @@ Core Gameplay Features:
 
 Debugging:
 	- Issues arise when a player jumps next two crates, causes quasi death
+	- Player can detonate bombs in mid air
 
 Advanced / Future Features:
 	- Fun lava bubble up thing?
