finished dragging placed bombs

--- a/metadata/todo.txt
+++ b/metadata/todo.txt
@@ -1,6 +1,4 @@
 Core Gameplay Features:
-	- Bomb Interactions:
-		- Make placed bombs draggable
 	- Animations & Effects:
 		- Add death animations
 		- Add sound effects
@@ -8,6 +6,8 @@ Core Gameplay Features:
 Debugging:
 	- Issues arise when a player jumps next two crates, causes quasi death
 	- Player can detonate bombs in mid air
+	- Bomb's not always killing player when landing on head
+	- Placed bomb's not havign sprite change on upgrade
 
 Advanced / Future Features:
 	- Fun lava bubble up thing?
