fixed crate and bomb bug issues

--- a/metadata/todo.txt
+++ b/metadata/todo.txt
@@ -4,9 +4,7 @@ Core Gameplay Features:
 		- Add sound effects
 
 Debugging:
-	- Issues arise when a player jumps next two crates, causes quasi death
-	- Player can detonate bombs in mid air
-	- Bomb's not always killing player when landing on head
+	- Odd dubble crate stack visual glitch
 
 Advanced / Future Features:
 	- Fun lava bubble up thing?
