added some sounds and fixed laval

--- a/metadata/todo.txt
+++ b/metadata/todo.txt
@@ -2,6 +2,8 @@ Core Gameplay Features:
 	- Animations & Effects:
 		- Add death animations
 		- Add sound effects
+			- Key pickup
+			- Player death
 
 Debugging:
 	- Odd dubble crate stack visual glitch
