--- a/metadata/todo.txt
+++ b/metadata/todo.txt
@@ -5,6 +5,4 @@ Must Do:
 Currently being thought about:
 	- Customized loading screen
 	- Player Guidance
-	- Adding rigid body in lava to prevent player sinkiing
-	- Make dragging a placed bomb back to bomb GUI pick it back up
-	- Make the player move toward the center of the chest on win
+	- Adding rigid body in lava to prevent player sinkiin
