small changes to gui and theme

--- a/metadata/todo.txt
+++ b/metadata/todo.txt
@@ -1,6 +1,6 @@
 Must Do:
 	- Make levels 5 -21
-	- Issues with text antialising causes missing pixles :(
+	- Make home screen buttons less ugly
 
 Currently being thought about:
 	- Customized loading screen
