tweaked some things based on mom's feedback

--- a/metadata/todo.txt
+++ b/metadata/todo.txt
@@ -1,6 +1,9 @@
 Current Tasks:
 	- Make more levels
 
+Bugs:
+	- bomb sprite issue on upgrade new placed?
+
 Future Tasks:
 	- Customized loading screen
 	- Talk to Kyle about making bomb-player collisions circular
